@@ -1047,6 +1047,9 @@ return array(
 			'mediawiki.action.history.diff',
 		),
 	),
+	'mediawiki.action.edit.stash' => array(
+		'scripts' => 'resources/src/mediawiki.action/mediawiki.action.edit.stash.js',
+	),
 	'mediawiki.action.history' => array(
 		'scripts' => 'resources/src/mediawiki.action/mediawiki.action.history.js',
 		'styles' => 'resources/src/mediawiki.action/mediawiki.action.history.css',
